Adjusted method of spacing content from nav, fixing full page center after transitions w/o popping

--- a/app/assets/stylesheets/controllers/main.sass
+++ b/app/assets/stylesheets/controllers/main.sass
@@ -59,8 +59,11 @@ body
             transform: scale(1)
 
         app-document-viewer
-            > div
-                /* Dynamic */
+            height: 100vh
+            position: relative
+            z-index: -1
+
+            > div.dynamic
                 opacity: 0
                 -webkit-transform: scale( 0.95 )
                 -ms-transform: scale( 0.95 )
