--- a/app/assets/stylesheets/partials/_navigation.sass
+++ b/app/assets/stylesheets/partials/_navigation.sass
@@ -2,6 +2,8 @@ $nav-height: 55px
 nav
     background: white
     box-shadow: 0px 0px 16px -5px rgb(0, 0, 0)
+    position: absolute
+    width: 100%
 
     #primary-banner
         background: inherit
